# PharmacyOnDuty

./: .djlintrc  .dockerignore  .env-export  .env.build  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Aptfile  CLAUDE.md  Dockerfile.dev  Dockerfile.osrm  Dockerfile.prod  Dockerfile.scraper  GEMINI.md  LICENSE  Procfile  docker-compose.override.yml  docker-compose.prod.coolify.yml  docker-compose.prod.yml  docker-compose.remotedev.yml  docker-compose.worker.yml  docker-compose.yml  dockerfile  dockerfile.prod  heroku.yml  justfile  manage.py  nginx.conf  pre-commit  pyproject.toml  readme.md  remotedev_nginx.conf.template  render.yaml  requirements.txt  test.txt  test_req.py
.codex/: maintenance.md
.github/: dependabot.yml
.github/workflows/: claude-code-review.yml  gemini-dispatch.yml
.jules/: sentinel.md
.zed/: launch.json  settings.json
PharmacyOnDuty/: __init__.py  asgi.py  celery.py  database_config.py  models.py  settings.py  sitemaps.py  urls.py  wsgi.py
conductor/: AGENTS.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/coverage_20251220/: metadata.json  plan.md
conductor/archive/docstrings_20251228/: metadata.json  plan.md  spec.md
conductor/archive/filter_sentry_noise_20251229/: metadata.json  plan.md  spec.md
conductor/archive/fix_systemexit_20251229/: metadata.json
conductor/archive/location_tests_20251230/: metadata.json  plan.md  spec.md
conductor/archive/perf_scraper_20251220/: plan.md
conductor/archive/wait_for_services_20251229/: metadata.json  plan.md  spec.md
conductor/code_styleguides/: python.md
conductor/tracks/arch_refactor_20251220/: metadata.json  plan.md  spec.md
conductor/tracks/coverage_20251220/: plan.md  spec.md
conductor/tracks/darkmode_20251220/: metadata.json  plan.md  spec.md
conductor/tracks/docstrings_20251228/: plan.md
conductor/tracks/filter_sentry_noise_20251229/: plan.md
conductor/tracks/fix_sitemap_20251229/: metadata.json  plan.md  spec.md
conductor/tracks/fix_systemexit_20251229/: plan.md  spec.md
conductor/tracks/location_tests_20251230/: plan.md
conductor/tracks/notifications_20251220/: metadata.json  plan.md  spec.md
conductor/tracks/perf_scraper_20251220/: metadata.json  plan.md  spec.md
conductor/tracks/security_20251220/: metadata.json  plan.md  spec.md
conductor/tracks/staging_20251220/: metadata.json  plan.md  spec.md
conductor/tracks/wait_for_services_20251229/: plan.md
docker/: AGENTS.md
docker/dev/: Dockerfile  Dockerfile.postgis  automation.env  docker-compose.yml
docker/postgis/: Dockerfile
docker/prod/: Dockerfile
docker/prod/services/: Dockerfile  Dockerfile.prod  docker-compose.yml
docker/prod/workers/: docker-compose.yml
docker/scripts/: setup-postgis.sh
pharmacies/: AGENTS.md  admin.py  apps.py  backends.py  models.py  tasks.py  urls.py  views.py
pharmacies/management/commands/: celery.py  create_working_schedule.py  seed_cities.py
pharmacies/migrations/: 0001_initial.py  0002_alter_pharmacy_phone.py  0003_alter_pharmacy_address.py  0004_alter_pharmacy_duty_end_alter_pharmacy_duty_start.py  0005_city_last_scraped_at.py  0006_alter_city_options_alter_pharmacy_options_and_more.py  0007_scraperconfig.py
pharmacies/templates/pharmacies/: index.html
pharmacies/tests/: test_ankara_scraper.py  test_csrf_mocked.py  test_eskisehir_scraper.py  test_input_validation.py  test_istanbul_scraper.py  test_models.py  test_scraper_performance.py  test_security.py  test_sentry_config.py  test_sitemaps.py  test_tasks.py  test_utils.py  test_views.py
pharmacies/utils/: __init__.py  ankaraeo_scraper.py  eskisehireo_scraper.py  istanbul_eczaneleri_scraper.py  istanbul_saglik_scraper.py  pharmacy_fetch.py  utils.py
pharmacies_nearby/: apps.py
pharmacies_nearby/static_src/: package-lock.json  package.json
pharmacies_nearby/templates/: base.html
scripts/: entrypoint.sh  on_deploy.sh  osrm_data_prep.sh  record_distance_matrix.py  wait_for_services.py
templates/: robots.txt
tests/: conftest.py  helpers.py  test_database_config.py  test_entrypoint.py  test_location_coverage.py  test_performance.py  test_settings_maps_warnings.py  test_wait_for_services.py
tests/fixtures/: fabricated_pharmacies.json  google_api_snapshots.json  location_scenarios.json  pharmacies_snapshot.json
theme/: AGENTS.md
theme/static_src/: package-lock.json  tailwind.config.js
theme/templates/: cookie_policy.html  pharmacies.html  privacy_policy.html  terms_of_service.html
