[project]
name = "pharmacyonduty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref>=3.9.2",
    "beautifulsoup4>=4.14.2",
    "celery>=5.5.3",
    "certifi>=2025.8.3",
    "charset-normalizer>=3.4.3",
    "click>=8.3.0",
    "django>=5.2.7",
    "django-browser-reload>=1.21.0",
    "django-celery-beat>=2.8.1",
    "django-celery-results>=2.6.0",
    "django-redis>=6.0.0",
    "django-tailwind>=4.2.0",
    "gunicorn>=23.0.0",
    "idna>=3.10",
    "mypy-extensions>=1.1.0",
    "packaging>=25.0",
    "pathspec>=0.12.1",
    "platformdirs>=4.4.0",
    "psycopg2-binary>=2.9.10",
    "pyparsing>=3.2.5",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "sentry-sdk>=2.39.0",
    "soupsieve>=2.8",
    "sqlparse>=0.5.3",
    "urllib3>=2.5.0",
    "whitenoise>=6.11.0",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_decorators = false

[tool.django-stubs]
django_settings_module = "PharmacyOnDuty.settings"


[dependency-groups]
dev = [
    "black>=25.9.0",
    "debugpy>=1.8.17",
    "django-stubs[compatible-mypy]>=5.2.5",
    "pre-commit>=4.3.0",
    "ruff>=0.13.3",
    "types-requests>=2.32.4.20250913",
]
