[project]
name = "pharmacyonduty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref>=3.9.2",
    "beautifulsoup4>=4.14.2",
    "celery>=5.5.3",
    "certifi>=2025.8.3",
    "charset-normalizer>=3.4.3",
    "click>=8.3.0",
    "django>=5.2.7",
    "django-browser-reload>=1.21.0",
    "django-celery-beat>=2.8.1",
    "django-celery-results>=2.6.0",
    "django-redis>=6.0.0",
    "django-tailwind>=4.2.0",
    "flower>=2.0.1",
    "gunicorn>=23.0.0",
    "idna>=3.10",
    "packaging>=25.0",
    "pathspec>=0.12.1",
    "platformdirs>=4.4.0",
    "pre-commit>=4.5.0",
    "psycopg2-binary>=2.9.10",
    "pyparsing>=3.2.5",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "sentry-sdk>=2.39.0",
    "soupsieve>=2.8",
    "sqlparse>=0.5.3",
    "urllib3>=2.5.0",
    "whitenoise>=6.11.0",
]


[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_decorators = false
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = "django_celery_beat.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "django_celery_results.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "django.contrib.gis.*"
ignore_errors = false

[[tool.mypy.overrides]]
module = "django.contrib.postgres.*"
ignore_errors = false

[tool.django-stubs]
django_settings_module = "PharmacyOnDuty.settings"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E4", "E7", "F", "I", "UP"]
ignore = ["E501", "F403"]
exclude = [
    "migrations/**",
    "**/migrations/**",
    ".git",
    "**/__pycache__/**",
    "*.egg-info/**",
    ".ruff_cache/**",
    "htmlcov/**",
    "manage.py",
]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
line-ending = "auto"
exclude = [
    "migrations/**",
    "**/migrations/**",
    ".git",
    "**/__pycache__/**",
    "*.egg-info/**",
    ".ruff_cache/**",
    "htmlcov/**",
    "manage.py",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "celery-types>=0.23.0",
    "django-stubs>=5.2.7",
    "django-stubs-ext>=5.2.7",
    "types-redis>=4.6.0.20241004",
    "types-requests>=2.32.4.20250913",
    "ruff>=0.14.9",
    "pre-commit>=4.5.0",
]

